@@ -1,1 +1,1 @@
-{"version":"5.6-RC2","releasedate":"2017-05-17"}
+{"version":"5.6-RC2","releasedate":"2017-05-18"}
